--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,7 @@
   <version>1.0</version>
 
   <name>novatec</name>
-  <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <url>http://www.novatec.com</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
